--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Apr Batch</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus temporibus explicabo quos, odit ducimus modi repudiandae omnis porro fugiat, quas rerum. Quis totam cupiditate adipisci odio ab? Nulla, error officiis?</p>
 </body>
 </html>
